rgbds-0.6.1/test/asm/syntax-error-eof-newline.err
error: syntax-error-eof-newline.asm(5) -> syntax-error-eof-newline.inc(1):
    syntax error, unexpected newline
error: Assembly aborted (1 error)!
